# prcomp

./: .gitignore  README.md  package-lock.json  package.json
docs/: requirements.md
src/: .env  App.js  Dockerfile  Homepage.jsx  Productlistpage.jsx  docker-compose.yml  start.sh
src/Components/: Footer.css  ListingNav.css  ListingNav.jsx  Navbar.css  Navbar.js  Section.css
src/engine/: Cargo.toml  Makefile.toml
src/engine/kws/: Cargo.toml  README.md
src/engine/kws/src/: lib.rs  test.rs  types.rs  vars.rs
src/engine/kws/src/config/: README.md  dump  mod.rs  types.rs  webschema.md
src/engine/kws/src/config/parse/: errors.rs  mod.rs  types.rs
src/engine/kws/src/fetch/: mod.rs  types.rs
src/engine/kws/wsch/: sample.wsch
src/engine/server/: Cargo.toml  README.md
src/engine/server/src/: dir.rs  main.rs
src/kwe/: .gitignore  Cargo.toml  root.html
src/kwe/_src/: log.rs  main.rs  rocket.rs  types.rs  wrapper.rs
src/kwe/_src/cnp/profiles/: flipkart.orel
src/kwe/etc/output_samples/: alienware.json  realme7pro.json
src/kwe/etc/scrape/presets/: orel_format  regex_mod.rs
src/kwe/src/: alg.md  db.rs  dump  log.rs  main.rs  types.rs  wrapper.rs
src/kwe/src/cnp/categories/: clothing
src/kwe/src/cnp/profiles/: FORMAT.orel  urbanladder.orel
src/kwe/src/kws/: mod.rs
src/kwe_responses/: geyser.json  jblFlip.json  macbook.json  samsungM31.json  trimmer.json  washMachine.json
src/ml/: .gitignore  recom.py  recommend.py  relevance.py  relv.py  requirements.txt  start.py  x.json
src/ml/data/test/: washMachine.csv
src/ml/data/train/: samsungm31trainingdata.csv
src/ml/old/: tfidf.py
src/nabu/: Cargo.toml  serva.cl
src/nabu/etc/output_samples/: realmex7.json
src/nabu/etc/scrape/presets/: amazon.rs  flipkart.rs
src/nabu/src/: alg.md  dump  log.rs  main.rs  nabu.rs  orel.rs  test  types.rs  wrapper.rs
src/nabu/src/cnp/: touch_profile.sh
src/nabu/src/cnp/categories/: electronics  furniture
src/nabu/src/cnp/profiles/: FORMAT.orel  ajio.orel  amazon.orel  flipkart.orel  snapdeal.orel  urbanladder.orel
src/nabu/src/nabu/: mod.rs
src/nabu/src/orel/: amazon.orel  mod.rs  orelhash  orelhash.rs  orelvec  orelvec.rs
src/nabu/src/pnc/profiles/: FORMAT.orel
src/nabu/src/scrape/: ajio-x.rs  amazon.rs  mod.rs  myntra-x.rs  oldmod.rs  orel_format  types.rs
src/nabu/src/scrape/orel/: test.orel
src/nabu/src/scrape/presets/: urbanladder.rs
src/www/: .gitignore  package-lock.json  package.json  tsconfig.json
src/www/cssDump/: Listingcontainer.css  Listingcontainer.jsx  Listingnav.css  Listingnav.jsx
src/www/src/: App.css  App.js  App.tsx  Footer.js  Home.css  Home.js  Home.jsx  Homepage.jsx  Productlistpage.css  Productlistpage.jsx  Section.js  index.css  index.js  oldspin.css
src/www/src/Components/: Catalog.css  Catalog.jsx  Compare.css  Compare.jsx  Filter.css  Filter.jsx  Footer.css  Footer.jsx  Listing.css  Listing.jsx  Navbar.css  Navbar.jsx  Productdef.css  Productdef.jsx  Title.jsx
src/www/src/Components/Assets/Badge/: Badge.tsx  badge.css
src/www/src/Components/Assets/Cart/: Cart.tsx  cart.css
src/www/src/Components/Assets/Crash/: Crash.tsx  crashed.css
src/www/src/Components/Assets/List/: Checkbox.tsx  Entry.tsx  list.css  list.tsx
src/www/src/Components/Assets/Loading/: Loading.tsx  loading-legacy.css  loading.css
src/www/src/Components/Assets/Login/: Login.css  Login.tsx  db.ts
src/www/src/Components/Assets/Menu/: Menu.jsx  menu.css
src/www/src/Components/Assets/Search/: Search.jsx  search.css
src/www/src/Components/Assets/Select/: Select.jsx  select.css
src/www/src/Components/Assets/Stores/: Stores.tsx  storeicon.css
src/www/src/Components/Assets/Tooltip/: Tooltip.jsx  tooltip.css
src/www/src/Components/Assets/Veil/: Veil.tsx  veil.css
src/www/src/Components/Footer/: Footer.css  Footer.jsx
src/www/src/Components/Footer/old/: oldFooter.jsx
src/www/src/Components/Home/: Catalog.css  Catalog.jsx  Home.jsx  RList.tsx  home.css  iphone.json  mock.json
src/www/src/Components/Home/old/: oldCatalog.css
src/www/src/Components/Listings/: Compare.css  Compare.jsx  Crashed.css  Crashed.jsx  Listing.css  Listing.jsx  Listing.tsx  Loading.jsx  Productdef.jsx  cache.js  dump  fetch.js
src/www/src/Components/Listings/Components/Card/: Card.tsx  card.css  layouts.css  parser.ts
src/www/src/Components/Listings/Components/Compare/: Compare.tsx  compare.css  table.css
src/www/src/Components/Listings/Components/Filter/: Controls.tsx  Filters.tsx  Menu.tsx  Panel.tsx  TPanel.tsx  Wrapper.tsx  controls.css  filters.css  menu.css  panel.css
src/www/src/Components/Listings/Components/Filter/sortbutton/: SortButton.tsx  sortbutton.css
src/www/src/Components/Listings/cogs/: cache.ts  fetch.ts  mock.json  product.ts  rlap.json  sort.ts
src/www/src/Components/Listings/old/: Container.css  Container.jsx  Filter.css  Filter.jsx  Listing.jsx  Loading.css
src/www/src/Components/Navbar/: Navbar.css  Navbar.jsx
src/www/src/Components/Navbar/old/: oldnavbar.jsx
src/www/src/hooks/: observe.ts  set.ts  toggle.ts  useOnClickOutside.ts
