[package]
name = "nabu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.1.1", features = ["json", "cookies", "tls"] } # HTTP requests library
regex = "1.5.4"               # An implementation of regular expressions for Rust. This implementation uses finite automata and g…
select = "0.5.0"      # A library to extract useful data from HTML documents, suitable for web scraping.
serde_json = "1.0.66"                     # A JSON serialization file format

[profile.dev.package."*"]
opt-level = 3
incremental = false
