[package]
name = "nabu"
version = "0.1.0"
edition = "2018"
authors = ["Rakshit Shetty <decentboi6969@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.1.1", features = ["json", "cookies", "charset"] } # HTTP requests library
select = "0.5.0"      # A library to extract useful data from HTML documents, suitable for web scraping.
fastrand = "1.5.0"      # A simple and fast random number generator
chrono = "0.4.19"                   # Date and time library for Rust
futures = "0.3.17"                # An implementation of futures and streams featuring zero allocations, composability, and itera…
reqwest = "0.11.4"                                # higher level HTTP client library
tokio = { version = "1.11.0"  , features = [ "full" ] }                # An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.…

[profile.dev.package."*"]
opt-level = 3
incremental = false
